Add toggle button for Month Avg display

--- a/scrimbaIndex.html
+++ b/scrimbaIndex.html
@@ -18,20 +18,22 @@
        <p id="days-el"></p>
        
        <!--<button id="reset-btn" onclick="reset()">CLOSE OUT THE MONTH</button>-->
-        <h2>Daily Averages</h2>
+        <h2 id="avg-el">Daily Average: </h2>
+        <button class="button1" id="months-all-btn" onclick="monthsAll()"><span style="color:white">See Averages for All Months</span></button>
+
         <div class="flex-container">
-            <div id="jan-el"></div>
-            <div id="feb-el"></div>        
-            <div id="mar-el"></div>        
-            <div id="apr-el"></div>
-            <div id="may-el"></div>
-            <div id="jun-el"></div>
-            <div id="jul-el"></div>
-            <div id="aug-el"></div>
-            <div id="sep-el"></div>
-            <div id="oct-el"></div>
-            <div id="nov-el"></div>
-            <div id="dec-el"></div>            
+            <div class="hidden" id="jan-el"></div>
+            <div class="hidden" id="feb-el"></div>        
+            <div class="hidden" id="mar-el"></div>        
+            <div class="hidden" id="apr-el"></div>
+            <div class="hidden" id="may-el"></div>
+            <div class="hidden" id="jun-el"></div>
+            <div class="hidden" id="jul-el"></div>
+            <div class="hidden" id="aug-el"></div>
+            <div class="hidden" id="sep-el"></div>
+            <div class="hidden" id="oct-el"></div>
+            <div class="hidden" id="nov-el"></div>
+            <div class="hidden" id="dec-el"></div>            
         </div>  
     </div>
     
